--- a/security.html
+++ b/security.html
@@ -43,7 +43,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-29</p>
 <hr/>
-<h5><a href='https://jobs.lever.co/udemy/cbb03f4b-1d09-4fc6-b4ec-13e443f7da73'>Udemy - Senior Security and Compliance Analyst</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/udemy/cbb03f4b-1d09-4fc6-b4ec-13e443f7da73'>Udemy - Senior Security and Compliance Analyst</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-29</p>
 <hr/>
@@ -103,7 +103,7 @@
 <p><span class="badge badge-light">Denver</span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
-<h5><a href='https://4re.referrals.selectminds.com/reedexhibitions/jobs/senior-security-engineer-25073'>Senior Security Engineer - Reed Exhibitions Careers</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://4re.referrals.selectminds.com/reedexhibitions/jobs/senior-security-engineer-25073'>Senior Security Engineer - Reed Exhibitions Careers</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>1 day ago ... Job Title: Security Engineer III. Summary of Position: The Security Engineer III will
 , Under general supervision, performs a wide variety of duties in support of?...</p>
@@ -164,7 +164,7 @@ within AbbVie's enterprise-wide information security team, will be responsible f
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/BoschGroup/743999692223712-professional-internship-security-software-engineer-m-f-'>Bosch Group Professional Internship: Security Software Engineer (M/F) | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/BoschGroup/743999692223712-professional-internship-security-software-engineer-m-f-'>Bosch Group Professional Internship: Security Software Engineer (M/F) | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
@@ -186,7 +186,7 @@ within AbbVie's enterprise-wide information security team, will be responsible f
 performance of research-related tasks, including data collection, manipulation 
 and?...</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/curriculumassociates/job/ozzCafwE'>Curriculum Associates Careers - Infrastructure Security Engineer</a></h5> 
+<h5><a href='https://jobs.jobvite.com/curriculumassociates/job/ozzCafwE'>Curriculum Associates Careers - Infrastructure Security Engineer</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
@@ -212,7 +212,7 @@ and?...</p>
 <p><span class="badge badge-light"></span></p>
 <p>Jul 15, 2019 ... Apply online for the job of Security Analyst PL (P366TS) at CINQ Technologies.</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/crowdstrike/job/oVQCafwh'>CrowdStrike Careers - Security Analyst</a></h5> 
+<h5><a href='https://jobs.jobvite.com/crowdstrike/job/oVQCafwh'>CrowdStrike Careers - Security Analyst</a></h5> 
 <p><span class="badge badge-light">Arlington</span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
@@ -247,7 +247,7 @@ tackling?...</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-25</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://bcbsfl.referrals.selectminds.com/jobs/sr-it-security-architect-6274'>Sr IT Security Architect - Florida Blue Careers</a></h5> 
+<h5><a href='https://bcbsfl.referrals.selectminds.com/jobs/sr-it-security-architect-6274'>Sr IT Security Architect - Florida Blue Careers</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-25</p>
 <hr/>
@@ -264,7 +264,7 @@ to enhance cyber adversary detection, network defense, and SOC process?...</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-07-25</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://freelancer.workable.com/j/271EBBF32F'>Freelancer.com - Jobs: Security Engineer - Apply online</a></h5> 
+<h5><a href='https://freelancer.workable.com/j/271EBBF32F'>Freelancer.com - Jobs: Security Engineer - Apply online</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-25</p>
 <hr/>
@@ -422,7 +422,7 @@ Tue 23rd July (reissue) at EMW, Inc.</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-23</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.crelate.com/portal/genesys/job/f9x6bqsu9dabqy4q8o5zzwyn4c'>Application Security Engineer | GENESYS Consulting Services, Inc.</a></h5> 
+<h5><a href='https://jobs.crelate.com/portal/genesys/job/f9x6bqsu9dabqy4q8o5zzwyn4c'>Application Security Engineer | GENESYS Consulting Services, Inc.</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-23</p>
 <hr/>
