--- a/devops.html
+++ b/devops.html
@@ -38,6 +38,14 @@
   
     <div class="container">
 <!--Begin body here --> 
+<h5><a href='https://jobs.lever.co/datacom.co.nz/99f8458f-a056-4371-84ee-8d426911612d'>Datacom - DevOps Systems Admin/Engineer</a></h5> 
+<p><span class="badge badge-light"></span></p>
+<p>Posted on: 2019-07-29</p>
+<hr/>
+<h5><a href='https://jobs.lever.co/datacom.co.nz/aa3e312f-aa5d-4938-8e1d-3ea99c621da7'>Datacom - DevOps Analyst/Consultant</a></h5> 
+<p><span class="badge badge-light"></span></p>
+<p>Posted on: 2019-07-29</p>
+<hr/>
 <h5><a href='https://docsapp.recruiterbox.com/jobs/fk03hdn/'>
     DevOps Engineer at DocsApp
 </a></h5> 
@@ -56,7 +64,7 @@
 <p><span class="badge badge-light">New York, NY</span></p>
 <p>Posted on: 2019-07-28</p>
 <hr/>
-<h5><a href='https://jobs.lever.co/tunein/d82e7176-a991-4c08-9f93-e53326767039'>TuneIn - Staff DevOps Engineer</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/tunein/d82e7176-a991-4c08-9f93-e53326767039'>TuneIn - Staff DevOps Engineer</a></h5> 
 <p><span class="badge badge-light">San Francisco, CA</span></p>
 <p>Posted on: 2019-07-28</p>
 <hr/>
@@ -175,7 +183,7 @@ relationships through actionable data, advanced analytics and machine learning.<
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://h2oai.applytojob.com/apply/i9S9O2Iys0/Senior-Devops-Engineer'>Senior Devops Engineer - h2o.ai - Career Page</a></h5> 
+<h5><a href='http://h2oai.applytojob.com/apply/i9S9O2Iys0/Senior-Devops-Engineer'>Senior Devops Engineer - h2o.ai - Career Page</a></h5> 
 <p><span class="badge badge-light">Mountain View, CA</span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
@@ -269,7 +277,7 @@ and has worked for companies like Google and Cisco. Nathan is ex-Chief?...</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
-<h5><a href='https://boards.greenhouse.io/sumup/jobs/4368634002'>Job Application for Senior DevOps Engineer Sofia at SumUp</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/sumup/jobs/4368634002'>Job Application for Senior DevOps Engineer Sofia at SumUp</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
@@ -391,7 +399,7 @@ published: 18.07.2019). Apply now or check the other available jobs.</p>
 <p>Jul 16, 2019 ... DevOps Cloud Architect. Maidenhead. Engineering ? Engineering. Full-Time. 
 Apply for this job. About Us. Alfresco Software, Inc. (?Alfresco?) is an enterprise?...</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/arundoanalytics/jobs/705260'>Job Application for DevOps Engineer at Arundo Analytics</a></h5> 
+<h5><a href='https://boards.greenhouse.io/arundoanalytics/jobs/705260'>Job Application for DevOps Engineer at Arundo Analytics</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>1 day ago ... Our website is www.arundo.com. Job Description. An experienced DevOps 
 Engineer to work with our product development team and clients. You will be 
@@ -455,14 +463,6 @@ term?...</p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
 <h5><a href='https://libertexgroup.workable.com/j/BC4748284E'>Libertex Group - Jobs: DevOps / Incident Manager (relocation to Montenegro) - Apply online</a></h5> 
-<p><span class="badge badge-light"></span></p>
-<p>Posted on: 2019-07-24</p>
-<hr/>
-<h5><a href='https://boards.greenhouse.io/wayfair/jobs/4367688002'>Job Application for DevOps Engineer- Database Infrastructure at Wayfair</a></h5> 
-<p><span class="badge badge-light"></span></p>
-<p>Posted on: 2019-07-24</p>
-<hr/>
-<h5><a href='https://firstwestcu.referrals.selectminds.com/jobs/devops-engineer-1704'>DevOps Engineer - First West Credit Union Careers</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
