--- a/deep-learning.html
+++ b/deep-learning.html
@@ -92,7 +92,7 @@ and Computer Vision to join us in our commitment to improve the quality of care?
 <p><span class="badge badge-light">Montreal, Canada</span></p>
 <p>Posted on: 2019-07-23</p>
 <hr/>
-<h5><a href='https://plumerai.workable.com/j/3A0A0AB1D2'>Plumerai - Jobs: Deep Learning Engineer - Apply online</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://plumerai.workable.com/j/3A0A0AB1D2'>Plumerai - Jobs: Deep Learning Engineer - Apply online</a></h5> 
 <p><span class="badge badge-light">Amsterdam North Holland, Netherlands</span></p>
 <p>Posted on: 2019-07-23</p>
 <hr/>
@@ -100,7 +100,7 @@ and Computer Vision to join us in our commitment to improve the quality of care?
 <p><span class="badge badge-light">Amsterdam North Holland, Netherlands</span></p>
 <p>Posted on: 2019-07-23</p>
 <hr/>
-<h5><a href='https://plumerai.workable.com/j/BF90B8A976'>Plumerai - Jobs: Deep Learning Scientist - Apply online</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://plumerai.workable.com/j/BF90B8A976'>Plumerai - Jobs: Deep Learning Scientist - Apply online</a></h5> 
 <p><span class="badge badge-light">London, England, United Kingdom</span></p>
 <p>Posted on: 2019-07-23</p>
 <hr/>
@@ -138,7 +138,7 @@ Vision / Computational geometry. GIT version control (good knowledge). English
 <p><span class="badge badge-light">San Mateo, CA</span></p>
 <p>Posted on: 2019-07-17</p>
 <hr/>
-<h5><a href='https://boards.greenhouse.io/alphasense/jobs/4359787002'>Job Application for Deep Learning Engineer - AI Research at AlphaSense</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/alphasense/jobs/4359787002'>Job Application for Deep Learning Engineer - AI Research at AlphaSense</a></h5> 
 <p><span class="badge badge-light">New York, NY</span></p>
 <p>Posted on: 2019-07-17</p>
 <hr/>
@@ -154,7 +154,7 @@ Vision / Computational geometry. GIT version control (good knowledge). English
 <p><span class="badge badge-light">London, United Kingdom</span></p>
 <p>Posted on: 2019-07-16</p>
 <hr/>
-<h5><a href='https://jobs.lever.co/forethought/0130b5ac-597a-4f57-99a9-a9a8d6a108ae'>Forethought - ML Engineer, Deep Learning &amp; NLP</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/forethought/0130b5ac-597a-4f57-99a9-a9a8d6a108ae'>Forethought - ML Engineer, Deep Learning &amp; NLP</a></h5> 
 <p><span class="badge badge-light">San Francisco</span></p>
 <p>Posted on: 2019-07-11</p>
 <hr/>
@@ -168,7 +168,7 @@ Vision / Computational geometry. GIT version control (good knowledge). English
 <p><span class="badge badge-light">Amsterdam Amsterdam</span></p>
 <p>Posted on: 2019-07-08</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://nvidia.wd5.myworkdayjobs.com/en-US/UniversityJobs/job/US-CA-Santa-Clara/Deep-Learning-Engineer---WWFO_JR1923118'>Deep Learning Engineer - WWFO</a></h5> 
+<h5><a href='https://nvidia.wd5.myworkdayjobs.com/en-US/UniversityJobs/job/US-CA-Santa-Clara/Deep-Learning-Engineer---WWFO_JR1923118'>Deep Learning Engineer - WWFO</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>6 days ago ... ... artificial intelligence and self-driving cars. Learn more about NVIDIA. Solutions 
 Architect - WWFO | US, CA, Santa Clara ? Solution Architect - WWFO | US, CA,?...</p>
@@ -235,7 +235,7 @@ position is to create products or tools built on Artificial Intelligence...</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-06-21</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/aeratechnology/0ddb6955-95c5-4b06-a34c-43cf9b8fd3e3'>Aera Technology - Senior Data Scientist - Deep Learning</a></h5> 
+<h5><a href='https://jobs.lever.co/aeratechnology/0ddb6955-95c5-4b06-a34c-43cf9b8fd3e3'>Aera Technology - Senior Data Scientist - Deep Learning</a></h5> 
 <p><span class="badge badge-light">Mountain View, CA</span></p>
 <p>Posted on: 2019-06-20</p>
 <hr/>
@@ -298,7 +298,7 @@ daytime?...</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-06-08</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/cresta/cca20c5d-17be-490e-a0a8-4d8817e3049b'>Cresta - Software Engineer (NLP/Deep Learning)</a></h5> 
+<h5><a href='https://jobs.lever.co/cresta/cca20c5d-17be-490e-a0a8-4d8817e3049b'>Cresta - Software Engineer (NLP/Deep Learning)</a></h5> 
 <p><span class="badge badge-light">Palo Alto, California</span></p>
 <p>Posted on: 2019-06-07</p>
 <hr/>
@@ -322,15 +322,15 @@ applied deep learning within autonomous vehicles and a strong level of expertise
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-06-04</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://saicusa.workable.com/j/2C0745CFCD'>SAIC Innovation Center - Jobs: Research Engineer, Computer Vision/Deep Learning - Apply online</a></h5> 
+<h5><a href='https://saicusa.workable.com/j/2C0745CFCD'>SAIC Innovation Center - Jobs: Research Engineer, Computer Vision/Deep Learning - Apply online</a></h5> 
 <p><span class="badge badge-light">San Jose, California</span></p>
 <p>Posted on: 2019-06-01</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/samsungssi/job/oA4cafwK'>Samsung Semiconductor, Inc. Careers - Advanced Neural Processor Lab - Deep Learning Hardware Architect</a></h5> 
+<h5><a href='https://jobs.jobvite.com/samsungssi/job/oA4cafwK'>Samsung Semiconductor, Inc. Careers - Advanced Neural Processor Lab - Deep Learning Hardware Architect</a></h5> 
 <p><span class="badge badge-light">California</span></p>
 <p>Posted on: 2019-05-30</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/BoschGroup/743999689014162-faszination-emobility-praktikum-fertigungsprozessbetreuung-e-maschine-automatisierte-prufung-eines-laserschwei-prozesses-mit-deep-learning'>Bosch Group Faszination eMobility: Praktikum Fertigungsprozessbetreuung E-Maschine: Automatisierte Pr?fung eines Laserschwei?prozesses mit Deep-Learning | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/BoschGroup/743999689014162-faszination-emobility-praktikum-fertigungsprozessbetreuung-e-maschine-automatisierte-prufung-eines-laserschwei-prozesses-mit-deep-learning'>Bosch Group Faszination eMobility: Praktikum Fertigungsprozessbetreuung E-Maschine: Automatisierte Pr?fung eines Laserschwei?prozesses mit Deep-Learning | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-05-29</p>
 <hr/>
@@ -428,11 +428,11 @@ Project?...</p>
 <p><span class="badge badge-light">California</span></p>
 <p>Posted on: 2019-04-30</p>
 <hr/>
-<h5><a href='https://jobs.jobvite.com/samsungssi/job/oUPW7fww'>Samsung Semiconductor, Inc. Careers - Advanced Systems Lab - Sr. Deep Learning Hardware Engineer</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/samsungssi/job/oUPW7fww'>Samsung Semiconductor, Inc. Careers - Advanced Systems Lab - Sr. Deep Learning Hardware Engineer</a></h5> 
 <p><span class="badge badge-light">California</span></p>
 <p>Posted on: 2019-04-30</p>
 <hr/>
-<h5><a href='https://jobs.jobvite.com/samsungssi/job/okRT7fwV'>Samsung Semiconductor, Inc. Careers - Deep Learning Engineer (Speech and Language Processing)</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/samsungssi/job/okRT7fwV'>Samsung Semiconductor, Inc. Careers - Deep Learning Engineer (Speech and Language Processing)</a></h5> 
 <p><span class="badge badge-light">San Diego California</span></p>
 <p>Posted on: 2019-04-30</p>
 <hr/>
@@ -444,7 +444,7 @@ Project?...</p>
 <p><span class="badge badge-light">California</span></p>
 <p>Posted on: 2019-04-30</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/matterport/179dcc62-57ec-40d2-a984-19ae8b8e0d50'>Matterport - Principal Deep Learning Engineer</a></h5> 
+<h5><a href='https://jobs.lever.co/matterport/179dcc62-57ec-40d2-a984-19ae8b8e0d50'>Matterport - Principal Deep Learning Engineer</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-04-29</p>
 <hr/>
